--- a/index.html
+++ b/index.html
@@ -1,15 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>abdullah al-maruf</title>
     <link rel="stylesheet" href="style.css">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <h1>WEL COME ABDULLAH AL MARUF'S PROFILE</h1>
-    
+    <div id="top">
+        <div class="">
+            <h1>Welcome To</h1>
+            <h1> <span class="devo-name">Abdullah Al Maruf,s</span> profile</h1>
+            <h3>student softwear engenner</h3>
+            <p class="brif">you might sow me active web developer fild.now i am student web development in
+                programming
+                hero
+                bacth-6, 2022.Bs.c computer science and engeneering 2019 </p>
+            <a class="hire-btn"
+                href="https://www.linkedin.com/login?fromSignIn=true&trk=guest_homepage-basic_nav-header-signin">Hre
+                Me</a>
+
+        </div>
+
+        <div>
+            <img class="devo-img" src="showOff/my-bg.png" alt="devo-pic">
+        </div>
+    </div>
+
+
 </body>
+
 </html>
