protfolio-2nd part

--- a/index.html
+++ b/index.html
@@ -32,6 +32,20 @@
             <img class="devo-img" src="showOff/my-bg.png" alt="devo-pic">
         </div>
     </div>
+    <section class="part-2">
+        <div>
+            <img src="showOff/my-bg2.png" alt="">
+        </div>
+        <div class="brif2">
+            <h2>win your dream</h2>
+            <h3>with your won website</h3>
+            <p>Today, having a company website is as crucial as having a shop, office or telephone number. Research has
+                found that 6/10 customers expect brands to have content online about their business. Why wait any longer
+                your customers are looking for you! If you own or operate a business which hasn't taken that step into
+                the online world, here are 10 reasons that will leave you wondering why you hadn't done it sooner</p>
+            <a class="hire-btn" href="">download</a>
+        </div>
+    </section>
 
 
 </body>
