--- a/index.html
+++ b/index.html
@@ -46,6 +46,31 @@
             <a class="hire-btn" href="">download</a>
         </div>
     </section>
+    <section class="part3">
+        <h1>experience</h1>
+        <div class="exparience">
+            <div class="exp">
+                <h2>full stack web developer</h2>
+                <h3>2023-future pro level developer</h3>
+                <p>Having the right set of web developer skills is essential to success in this profession. Though the
+                    exact
+                    skills needed for someone in this profession will vary by company,</p>
+            </div>
+            <div class="exp">
+                <h2>junior web developer</h2>
+                <h3>2022-present junior web developer </h3>
+                <p>Web developer skills refer to the specific abilities needed to get hired and successfully perform in
+                    a
+                    web developer role. Having these skills in abundance can help you stand out from other candidates
+                    vying
+                    for the same role and in your everyday tasks on the job.</p>
+            </div>
+        </div>
+
+    </section>
+    <footer>
+        <p>abdullah al amaruf</p>
+    </footer>
 
 
 </body>
